# PDWT

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  Makefile  README.md  TODO.txt
app/: CMakeLists.txt
app/demo/: CMakeLists.txt
app/demo2Dcpp/: CMakeLists.txt  demo2D.cpp
app/demo3Dcpp/: CMakeLists.txt  demo3D.cpp
app/democpp/: CMakeLists.txt  demo.cpp
app/democuda/: CMakeLists.txt  demo.cpp
binding/: CMakeLists.txt
binding/python/: CMakeLists.txt  CoeffContainer1D.cpp  Wavelet1D.cpp
binding/python/src/: CMakeLists.txt  Wavelet.cpp  Wavelet1D.cpp  WaveletBind1D.h  WaveletBind2D.h  WaveletBind3D.h
example/binding/python/: Wavelet1D.py
src/: CMakeLists.txt  CoeffContainer.cpp  CoeffContainer.h  DualTreeLinearOp.h  Filters.cpp  Filters.h  Separable.h  Wavelet.cpp  Wavelet.h  Wavelet1D.cpp  Wavelet1D.h  Wavelet2D.cpp  Wavelet2D.h  Wavelet3D.cpp  Wavelet3D.h  coeffContainer.cpp  coeffContainer.h  common.h  dualTreeLinearOp.h  filters.cpp  filters.h  metaHelper.h  separable.h  service.cpp  service_backend.cpp  utils.h  vectorization.h  wt.cpp  wt.h
src/Cuda/: constant.cu  separable.cu
src/cuda/: CoeffContainer.cu  ManagedAllocator.cu.h  coeffContainer.cu  common.cu.h  constant.cu  filters.cu.h  separable.cu  separable.cu.h  wt.cu
src/cuda/utils/: DeviceManager.cu  DeviceManager.cu.h
src/protobuf/: service.proto
src/service/: backend.go  go.mod  main.go
src/service/types/: request.go  response.go
src/vectorization/: ConcatAndCut.h  MemoryHelper.h  Reduce.h  SubsampledConcatAndCut.h  vectorization.h
test/: CMakeLists.txt
test/binding/python/: Wavelet1D.py
test/src/: CMakeLists.txt  Daub2_1D.cpp  Wavelet_1D.cpp  Wavelet_2D.cpp  Wavelet_3D.cpp  convolution.cpp
